--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
         <button class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">: - Phong</button>
         <button class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">. - Toon</button>
         <button class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">, - Line</button>
-        <button class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">, - Normal</button>
+        <button class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">? - Normal</button>
+        <button class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">/ - Lambert</button>
+        <button class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">+ - shadow</button>
       </div>
     </div>
   </div>
