--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
     }
   });
 
-  /* ✅ FIXED MODAL CODE */
   document.addEventListener("DOMContentLoaded", function () {
 
     const profileImage = document.getElementById("profileImage");
@@ -64,8 +63,10 @@
   });
 </script>
 
-  <div class="absolute right-1/32 top-10 rounded-4xl h-48 w-1/8 bg-white flex flex-col justify-center items-center">
+  <div class="absolute right-1/32 top-10 rounded-4xl h-64 w-1/8 bg-white flex flex-col justify-center items-center">
 
+    <p class="px-4 text-slate-800 font-bold">Tutorial</p>
+    <p class="px-4 py-2 text-slate-800 text-xs text-center">Click these buttons on keyboard or just click UI buttons to operate.</p>
     <div class="relative w-5/6 py-1">
       <button onclick="toggleDropdown('geometryDropdown')"
         class="w-full bg-black hover:bg-white border-2 border-white hover:border-black hover:text-black font-mono text-white px-4 py-1 rounded-full">
