--- a/index.html
+++ b/index.html
@@ -73,16 +73,17 @@
         Geometry
       </button>
       <div id="geometryDropdown" class="absolute right-full top-0 mt-2 bg-white shadow-lg rounded-lg p-3 hidden w-48">
-        <button id="boxButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">1 - Box</button>
-        <button id="sphereButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">2 - Sphere</button>
-        <button id="coneButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">3 - Cone</button>
-        <button id="cylinderButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">4 - Cylinder</button>
-        <button id="capsuleButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">5 - Capsule</button>
-        <button id="tetraButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">6 - Tetrahedron</button>
-        <button id="octaButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">7 - Octahedron</button>
-        <button id="dodecaButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">8 - Dodecahedron</button>
-        <button id="torusknotButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">9 - TorusKnot</button>
-        <button id="geometryRemoveButton" class="w-full text-left px-2 py-1 rounded-lg text-rose-500 font-bold hover:bg-rose-100">0 - Remove
+        <p class="border-b border-black pb-2 mb-2 font-medium">Press keys</p>
+        <button id="boxButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200"><span class="bg-black text-white font-bolt rounded-sm px-2 mr-2">1</span> Box</button>
+        <button id="sphereButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200"><span class="bg-black text-white font-bolt rounded-sm px-2 mr-2">2</span> Sphere</button>
+        <button id="coneButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200"><span class="bg-black text-white font-bolt rounded-sm px-2 mr-2">3</span> Cone</button>
+        <button id="cylinderButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200"><span class="bg-black text-white font-bolt rounded-sm px-2 mr-2">4</span>Cylinder</button>
+        <button id="capsuleButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200"><span class="bg-black text-white font-bolt rounded-sm px-2 mr-2">5</span> Capsule</button>
+        <button id="tetraButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200"><span class="bg-black text-white font-bolt rounded-sm px-2 mr-2">6</span> Tetrahedron</button>
+        <button id="octaButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200"><span class="bg-black text-white font-bolt rounded-sm px-2 mr-2">7</span> Octahedron</button>
+        <button id="dodecaButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200"><span class="bg-black text-white font-bolt rounded-sm px-2 mr-2">8</span> Dodecahedron</button>
+        <button id="torusknotButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200"><span class="bg-black text-white font-bolt rounded-sm px-2 mr-2">9</span> TorusKnot</button>
+        <button id="geometryRemoveButton" class="w-full text-left px-2 py-1 rounded-lg text-rose-500 font-bold hover:bg-rose-100"><span class="bg-red-500 text-white font-bolt rounded-sm px-2 mr-2">0</span> Remove
           All</button>
       </div>
     </div>
@@ -93,12 +94,13 @@
         Lights
       </button>
       <div id="lightDropdown" class="absolute right-full top-0 mt-2 bg-white shadow-lg rounded-lg p-3 hidden w-48">
-        <button id="ambientButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">a - Ambient</button>
-        <button id="directionalButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">d - Directional</button>
-        <button id="spotButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">s - Spotlight</button>
-        <button id="pointButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">p - PointLight</button>
-        <button id="rectButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">r - RectAreaLight</button>
-        <button id="removeLightButton" class="w-full text-left px-2 py-1 rounded-lg text-rose-500 font-bold hover:bg-rose-100">x - Remove All</button>
+        <p class="border-b border-black pb-2 mb-2 font-medium">Press keys</p>
+        <button id="ambientButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200"><span class="bg-black text-white font-bolt rounded-sm px-2 mr-2">a</span> Ambient</button>
+        <button id="directionalButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200"><span class="bg-black text-white font-bolt rounded-sm px-2 mr-2">d</span> Directional</button>
+        <button id="spotButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200"><span class="bg-black text-white font-bolt rounded-sm px-2 mr-2">s</span> Spotlight</button>
+        <button id="pointButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200"><span class="bg-black text-white font-bolt rounded-sm px-2 mr-2">p</span> PointLight</button>
+        <button id="rectButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200"><span class="bg-black text-white font-bolt rounded-sm px-2 mr-2">r</span> RectAreaLight</button>
+        <button id="removeLightButton" class="w-full text-left px-2 py-1 rounded-lg text-rose-500 font-bold hover:bg-rose-100"><span class="bg-red-500 text-white font-bolt rounded-sm px-2 mr-2">x</span> Remove All</button>
       </div>
     </div>
 
@@ -108,8 +110,9 @@
         Camera
       </button>
       <div id="cameraDropdown" class="absolute right-full top-0 mt-2 bg-white shadow-lg rounded-lg p-3 hidden w-48">
-        <button id="perspectiveButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">- Perspective</button>
-        <button id="orthographicButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">= Orthographic</button>
+        <p class="border-b border-black pb-2 mb-2 font-medium">Press keys</p>
+        <button id="perspectiveButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200"><span class="bg-black text-white font-bolt rounded-sm px-2 mr-2">-</span> Perspective</button>
+        <button id="orthographicButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200"><span class="bg-black text-white font-bolt rounded-sm px-2 mr-2">=</span> Orthographic</button>
       </div>
     </div>
 
@@ -119,15 +122,16 @@
         Materials
       </button>
       <div id="materialDropdown" class="absolute right-full top-0 mt-2 bg-white shadow-lg rounded-lg p-3 hidden w-48">
-        <button id="basicMaterialButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">[ - Basic</button>
-        <button id="standardMaterialButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">] - Standard</button>
-        <button id="physicalMaterialButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">; - Physical</button>
-        <button id="phongMaterialButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">: - Phong</button>
-        <button id="toonMaterialButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">. - Toon</button>
-        <button id="lineMaterialButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">, - Line</button>
-        <button id="normalMaterialButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">? - Normal</button>
-        <button id="lambertMaterialButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">/ - Lambert</button>
-        <button id="shadowMaterialButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200">+ - Shadow</button>
+        <p class="border-b border-black pb-2 mb-2 font-medium">Press keys</p>
+        <button id="basicMaterialButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200"><span class="bg-black text-white font-bolt rounded-sm px-2 mr-2">[</span>Basic</button>
+        <button id="standardMaterialButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200"><span class="bg-black text-white font-bolt rounded-sm px-2 mr-2">]</span>Standard</button>
+        <button id="physicalMaterialButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200"><span class="bg-black text-white font-bolt rounded-sm px-2 mr-2">;</span> Physical</button>
+        <button id="phongMaterialButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200"><span class="bg-black text-white font-bolt rounded-sm px-2 mr-2">:</span> Phong</button>
+        <button id="toonMaterialButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200"><span class="bg-black text-white font-bolt rounded-sm px-2 mr-2">.</span> Toon</button>
+        <button id="lineMaterialButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200"><span class="bg-black text-white font-bolt rounded-sm px-2 mr-2">,</span> Line</button>
+        <button id="normalMaterialButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200"><span class="bg-black text-white font-bolt rounded-sm px-2 mr-2">?</span> Normal</button>
+        <button id="lambertMaterialButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200"><span class="bg-black text-white font-bolt rounded-sm px-2 mr-2">/</span> Lambert</button>
+        <button id="shadowMaterialButton" class="w-full text-left px-2 py-1 rounded-lg hover:bg-slate-200"><span class="bg-black text-white font-bolt rounded-sm px-2 mr-2">+</span> Shadow</button>
       </div>
     </div>
   </div>
@@ -150,6 +154,22 @@
       <img id="modalImage" class="max-h-[90vh] max-w-[90vw] rounded-xl shadow-2xl" />
     </div>
   </div>
+
+
+  <div id="info" class="absolute right-1/32 bottom-10 w-60 h-110 bg-white rounded-3xl shadow-xl flex flex-col justify-start items-center p-6 space-y-4">
+
+  <h2 class="text-xl font-bold text-gray-900 mb-2">Scene Info</h2>
+  <p class="font-medium text-left w-full">Geometry:</p>
+  <p id="geometryInfo" class="w-full text-gray-800 font-medium bg-gray-100 px-3 py-1 rounded-lg shadow-inner">Geometry: -</p> 
+  <p class="font-medium text-left w-full">Material:</p>
+  <p id="materialInfo" class="w-full text-gray-800 font-medium bg-gray-100 px-3 py-1 rounded-lg shadow-inner"> Material: -</p>
+  <p class="font-medium text-left w-full"> Camera: </p>
+  <p id="cameraInfo" class="w-full text-gray-800 font-medium bg-gray-100 px-3 py-1 rounded-lg shadow-inner"> Camera: -</p>
+  <p class="font-medium text-left w-full">Light: </p>
+  <p id="lightInfo" class="w-full text-gray-800 font-medium bg-gray-100 px-3 py-1 rounded-lg shadow-inner">Light: -</p>
+
+</div>
+
 
 </body>
 
